small fix for index page as divs were creating some extra space

--- a/style.css
+++ b/style.css
@@ -183,6 +183,16 @@ nav ul li a:hover::after{
   background-position: center;
   background-repeat: no-repeat;
   height: 100%;
+  object-fit: cover;
+}
+
+
+.img{
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 .header-text.first-page {
@@ -282,8 +292,7 @@ font-size: 50px;
 
 .tab-titles{
   display: flex;
-  margin: 20px 15px 40px;
-
+  margin: 20px 0px 40px;
 }
 
 .tab-links{
@@ -735,13 +744,7 @@ height: 64vh;
 
  #header {
   margin-top: 130px;
-  height:auto;
-}
-
-
-#header.img{
-  height: 100%;
-  width: 100%;
+  height:400px;
 }
 
 
